RESOLVED FIXED210711
REGRESSION (r259610): Leak of RBSAssertionInvalidationCallbackType due to missing -dealloc
https://bugs.webkit.org/show_bug.cgi?id=210711
Summary REGRESSION (r259610): Leak of RBSAssertionInvalidationCallbackType due to mis...
David Kilzer (:ddkilzer)
Reported 2020-04-18 19:42:13 PDT
Leak of RBSAssertionInvalidationCallbackType due to missing -dealloc. Found by clang static analyzer: 'WKRBSAssertionDelegate' lacks a 'dealloc' instance method but must release '_invalidationCallback' Regressed with the fix for Bug 210065 in r259610: Bug 196659: [iOS] Transition most process assertions to RunningBoard <https://bugs.webkit.org/show_bug.cgi?id=210065> <rdar://problem/61354901> <https://trac.webkit.org/r259610>
Attachments
Patch v1 (1.55 KB, patch)
2020-04-18 19:44 PDT, David Kilzer (:ddkilzer)
no flags
Patch for landing (2.79 KB, patch)
2020-04-19 18:58 PDT, David Kilzer (:ddkilzer)
no flags
Patch for landing v2 (1.51 KB, patch)
2020-04-19 19:01 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-18 19:43:32 PDT
David Kilzer (:ddkilzer)
Comment 2 2020-04-18 19:44:56 PDT
Created attachment 396889 [details] Patch v1
David Kilzer (:ddkilzer)
Comment 3 2020-04-18 19:45:26 PDT
Comment on attachment 396889 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=396889&action=review > Source/WebKit/UIProcess/ios/ProcessAssertionIOS.mm:275 > +- (void)dealloc I chose to implement dealloc because using RetainPtr<> would require an instance variable and a custom getter (and maybe a setter). When switching to ARC, we simply delete the -dealloc method and the @property will work as expected.
Geoffrey Garen
Comment 4 2020-04-19 17:45:30 PDT
Comment on attachment 396889 [details] Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 5 2020-04-19 18:58:11 PDT
Created attachment 396933 [details] Patch for landing
David Kilzer (:ddkilzer)
Comment 6 2020-04-19 19:01:31 PDT
Created attachment 396934 [details] Patch for landing v2
EWS
Comment 7 2020-04-19 20:54:31 PDT
Found 1 new test failure: fast/layoutformattingcontext/simple-absolute-positioned-replaced-inline-element-with-percentage-height.html
EWS
Comment 8 2020-04-20 00:11:33 PDT
Committed r260354: <https://trac.webkit.org/changeset/260354> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396934 [details].
Note You need to log in before you can comment on or make changes to this bug.