REGRESSION (r259610): Leak of RBSAssertionInvalidationCallbackType due to missing -dealloc <https://webkit.org/b/210711> <rdar://problem/61993361>

Reviewed by Geoffrey Garen.

* UIProcess/ios/ProcessAssertionIOS.mm:
(-[WKRBSAssertionDelegate dealloc]): Add.
- Release _invalidationCallback to fix the leak.


Canonical link: https://commits.webkit.org/223614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260354 268f45cc-cd09-0410-ab3c-d52691b4dbfc